<resources>
    <!-- activity name -->
    <string name="app_name">MyNews</string>
    <string name="notification_activity_name">Notifications</string>
    <string name="search_activity_name">Search Articles</string>

    <!-- toolbar text -->
    <string name="notification_toolbar_title">Notifications</string>
    <string name="research_toolbar_title">Research</string>
    <string name="help_toolbar_title">Help</string>
    <string name="about_toolbar_title">About</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- search and notification layout strings -->
    <string name="search_input_text">Search query term</string>
    <string name="begin_date_text">Begin Date</string>
    <string name="end_date_text">End Date</string>
    <string name="checkbox_science_text">Science</string>
    <string name="checkbox_health_text">Health</string>
    <string name="checkbox_world_text">World</string>
    <string name="checkbox_technology_text">Technology</string>
    <string name="checkbox_financial_text">Financial</string>
    <string name="checkbox_education_text">Education</string>
    <string name="search_button_text">SEARCH</string>
    <string name="notification_switch_text">Enable notifications (once per day)</string>

    <!-- Shared preferences for notifications -->
    <string name="notification_preference_file_key">SAVED_NOTIFICATION</string>
    <string name="notification_preferences_query">NOTIFICATION_PREFS_QUERY</string>
    <string name="notification_preferences_themes">NOTIFICATION_PREFS_THEMES</string>

    <!-- Notification content -->
    <string name="notification_content_title">"New York Times"</string>
    <string name="notification_content_articles_found">" articles match your request !"</string>
    <string name="notification_channel_title">"My saved research"</string>
    <string name="notification_channel_description">"Send numbers of new articles that match the user saved research"</string>

    <!-- RecyclerView row strings -->
    <string name="recycler_view_image_description">news_article_picture</string>
    <string name="recycler_view_row_title">fil d\'ariane</string>
    <string name="recycler_view_content_text">Ici l\'apperçu du début de l\'article à l\'intérieur de cet item</string>
    <string name="recycler_view_date">17/25/89</string>
    <string name="no_article_found_text">Oops ! We can\'t fetch those New York Times articles.\n\nPull down to refresh.</string>

    <!-- SnackBar -->
    <string name="no_internet_connection">No connection</string>
    <string name="internet_connection_getback">Connection is back !</string>
    <string name="snackbar_no_article_found_text">It seems we did no find any articles to read over here &#8230;</string>
    <string name="positive_btn_no_article_found_sb_text">Refine my search</string>
    <string name="negative_btn_no_article_found_sb_text">Go home</string>
    <string name="hmmm_snackbar">Hmmm</string>

    <!-- Image content description -->
    <string name="icon_pull_to_refresh_content_description">Down arrow to show how to refresh the page</string>
    <string name="nav_drawer_subtitle">Powered by New York Times</string>
    <string name="nav_drawer_title">MyNews</string>
    <string name="drawer_ts_text">Top Stories</string>
    <string name="drawer_mp_text">Most Popular</string>
</resources>
