<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recycler_item"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- todo: replace fake strings with NYT api data -->

    <ImageView
        android:id="@+id/recycler_item_image"
        android:contentDescription="@string/recycler_view_image_description"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        />

    <TextView
        android:id="@+id/recycler_item_ariane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/recycler_view_row_title"
        app:layout_constraintLeft_toRightOf="@id/recycler_item_image"
        app:layout_constraintTop_toTopOf="@id/recycler_item_image"
        android:layout_marginStart="@dimen/medium"
        />

    <TextView
        android:id="@+id/recycler_item_snippet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        app:layout_constraintLeft_toRightOf="@id/recycler_item_image"
        android:layout_marginStart="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="@id/recycler_item_image"
        android:text="@string/recycler_view_content_text"/>

    <TextView
        android:id="@+id/recycler_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/recycler_item_image"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/medium"
        android:text="@string/recycler_view_date"/>

</android.support.constraint.ConstraintLayout>